tests/script_runtime_errors/subslice_bad_start/error.txt
Error: 
    2 | event[k:4]
      |       ^ Conflicting types, got string but expected integer